# misc

./: Master Batch Record Creator.xlsm  README.md
ByteTree/: KJVwords.csv  KJVwords.xlsx  LoremIpsum.txt  LoremIpsumShort.txt  Makefile  README.txt  build.cmd  build.sh  stringtest.c  testoutput.txt
ByteTree/include/: PropertyTree.hxx  PropertyTree_bytetree.hxx  PropertyTree_map.hxx  bytetree.h
ByteTree/src/: PropertyTree_bytetree.cxx  PropertyTree_map.cxx  Test.cxx  Test_cbt.cxx  Test_map.cxx  bytetree.c
CUtils/incbuild/: incbuild.c
CUtils/isprime/: isprime-con.c  isprime-dlg.c  isprime.rco  isprime2-con.c  primesft.c  primesft.h  tstprime.asm
CUtils/pispigot/: pispigot-dlg.rc  pispigot.h
ForTheWin/: CMakeLists.txt  Chooser.cpp  Chooser.hpp  IncludedModules.hpp  IncludedModules.in  Module.hpp  README.txt  WinMain.cpp
ForTheWin/Modules/: CMakeLists.txt
ForTheWin/Modules/PiSpigot/: CMakeLists.txt  PiSpigot-dlg.cpp  PiSpigot-dlg.hpp  PiSpigot.c  PiSpigot.h
ForTheWin/Modules/PrimeSift/: CMakeLists.txt  PrimeSift-dlg.cpp  PrimeSift-dlg.hpp  primesift.c  primesift.h
ForTheWin/Res/: ForTheWin.rc  resource.h
OldGameEngines/: README.txt
OldGameEngines/MAGES/: .gitignore  AStyleRC  CMakeLists.txt  Doxyfile.in  MainPage.dox
OldGameEngines/MAGES/depends/: CMakeLists.txt
OldGameEngines/MAGES/include/: CMakeLists.txt
OldGameEngines/MAGES/include/MAGES/: Commands.hxx  Core.hxx  Globals.hxx.in  MAGES.hxx  PropertyDB.hxx  PropertySerializer.hxx  SerializerJSON.hxx  Subsystem.hxx
OldGameEngines/MAGES/src/: CMakeLists.txt  Core.cxx  PropertyDB.cxx  PropertySerializer.cxx  SerializerJSON.cxx  Subsystem.cxx
OldGameEngines/MAGES/tests/: CMakeLists.txt  TCore.cxx
PiRover/: Main.py  README.txt  RoverCommander.py  RoverConnector.py  RoverConnectorBluetooth.py  RoverConnectorIP.py  RoverConnectorWifi.py  RoverController.py  pirover.service
Python/: FileListByTime.py  FileListByWrite.py  README.txt  StockTracker.py  pwgen.py
SimpleTests/: ArrayAlloc.cpp  DequeTest.cpp  IdPool.cpp  LIFO.cpp  Logging.cpp  MediaHint.cpp  MemWipe.cpp  Notifications.cpp  README.txt  VirtualRTTI.cpp  memwipe2.cpp  object_id.cpp  rtti.cpp
SimpleTests/Rubber/: Makefile  README.txt
SimpleTests/Rubber/src/: MasterNode.cpp  MasterNode.hpp  Node.cpp  Node.hpp  Rubber.cpp
SimpleTests/Types/: Deque.hpp  IdPool.hpp
SimpleTests/XMLTest/: MultiDoc.xml  MultiDocCompact.xml  MultiDocPrint.cpp  README.txt  StressTest.cpp  StressTest.xml  fireworks.xml  stresstest.txt
Utils/: README.txt
Utils/incbuild/: bversion.h  bversion.rc
Utils/isprime/: build.bat  isprime.rc  resource.h  tstprime2.asm
Utils/nreasm/: nreasm.c
Utils/pispigot/: build.bat  pispigot-con.c  pispigot-con.rc  pispigot-con.rco  pispigot-dlg.c  pispigot-dlg.rco  pispigot-fcon.c  pispigot.c  readme.txt  resource.h
overmind_techdemo_0.0.1_src/: CMakeLists.txt  OriginalReadme.txt  README.txt
overmind_techdemo_0.0.1_src/Data/: overmind.desktop  overmind.xpm
overmind_techdemo_0.0.1_src/Data/GUI/Scripts/: Demo8.lua
overmind_techdemo_0.0.1_src/Doc/: CMakeLists.txt  Doxyfile.in
overmind_techdemo_0.0.1_src/Source/: APIMainPage.di  CMakeLists.txt  Overmind.cpp  OvermindConfig.h.in
overmind_techdemo_0.0.1_src/Source/Engine/: CEGUIManager.cpp  CEGUIManager.hpp  CMakeLists.txt  LuaManager.cpp  LuaManager.hpp  Manager.hpp  OISManager.cpp  OISManager.hpp  OgreAudioManager.cpp  OgreAudioManager.hpp  OgreManager.cpp  OgreManager.hpp  OvermindEngine.cpp  OvermindEngine.hpp  Singleton.hpp
overmind_techdemo_0.0.1_src/cmake/: FindCEGUI.cmake  FindOgreOggSound.cmake
